kitten/reported_bugs/rust/rust-83253-2/stderr.txt
error[E0770]: the type of const parameters must not depend on other generic parameters

 --> mutant.rs:6:1

  |

6 | N > { type Answer ; } struct True ; struct False ; impl < const N : u8 > IsZero < N > for ( ) where ( ) : If < { N == 0 } > { type Answer...

  | ^ the type must not depend on the parameter `N`



error: constant expression depends on a generic parameter

 --> mutant.rs:6:107

  |

6 | N > { type Answer ; } struct True ; struct False ; impl < const N : u8 > IsZero < N > for ( ) where ( ) : If < { N == 0 } > { type Answer...

  |                                                                                                           ^^^^^^^^^^^^^^^^^

  |

  = note: this may fail depending on what value the parameter takes



thread 'rustc' panicked at 'assertion failed: `(left == right)`

  left: `[type error]`,

 right: `u8`: cannot relate constants of different types', /rustc/36f1f04f18b89ba4a999bcfd6584663fd6fc1c5d/compiler/rustc_middle/src/ty/relate.rs:502:5

note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.52.0-nightly (36f1f04f1 2021-03-17) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [check_item_well_formed] checking that `<impl at mutant.rs:6:184: 7:45>` is well-formed

#1 [analysis] running analysis passes on this crate

end of query stack

thread 'rustc' panicked at 'assertion failed: `(left == right)`

  left: `[type error]`,

 right: `u8`: cannot relate constants of different types', /rustc/36f1f04f18b89ba4a999bcfd6584663fd6fc1c5d/compiler/rustc_middle/src/ty/relate.rs:502:5



error: internal compiler error: unexpected panic



note: the compiler unexpectedly panicked. this is a bug.



note: we would appreciate a bug report: https://github.com/rust-lang/rust/issues/new?labels=C-bug%2C+I-ICE%2C+T-compiler&template=ice.md



note: rustc 1.52.0-nightly (36f1f04f1 2021-03-17) running on x86_64-unknown-linux-gnu



note: compiler flags: -Z mir-opt-level=3 -Z new-llvm-pass-manager=yes -Z unsound-mir-opts=yes -Z polonius=yes -Z polymorphize=yes -C debuginfo=2 -C opt-level=3 --crate-type staticlib



query stack during panic:

#0 [check_item_well_formed] checking that `<impl at mutant.rs:8:1: 9:46>` is well-formed

#1 [analysis] running analysis passes on this crate

end of query stack

error: aborting due to 2 previous errors



For more information about this error, try `rustc --explain E0770`.

